# entropy-governance

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-DOCS  README.md  RELEASE_GUIDE.md  domains.yaml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: api.md  cli.md  index.md
src/entropy_governance/: __init__.py  cli.py  core.py  entropy_table_bridge.py  tesseract.py
tests/: test_bridge.py  test_cli.py  test_core.py  test_tesseract.py
